@@ -3,15 +3,20 @@ dpf-ax changelog
 	by <hackfin@section5.ch>
 	Find details in the git or svn logs.
 
+Sat, 05 Jan 2013
+       by superelchi
+       * New model:
+	 - taobao (thx cuckoohello).
+
 Thu, 03 Jan 2013
        by superelchi
        * New model:
-	 - linkdelight_5 (thx LUISE)
+	 - linkdelight_5 (thx LUISE).
 
 Fri, 07 Dec 2012
        by superelchi
        * New model:
-	 - clas_ohlson (thx BufferFramed)
+	 - clas_ohlson (thx BufferFramed).
 
 Sat, 01 Dec 2012
        by superelchi
